--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   "dependencies": {
     "@react-navigation/material-bottom-tabs": "^5.2.19",
     "@react-navigation/native": "^5.7.6",
-    "react": "16.13.1",
+    "react": "^16.13.1",
     "react-native": "0.63.3",
+    "react-native-elements": "^2.3.2",
     "react-native-paper": "^4.2.0",
     "react-native-vector-icons": "^7.1.0"
   },
